added header navlink for header

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -20,6 +20,11 @@
     font-weight: 100;
 }
 
+.header-nav{
+    text-decoration: none;
+    color: #fff;
+}
+
 /* mode-switch-css */
 
 .mode-switch{
