--- a/src/Pages/CurrentBlogPage.css
+++ b/src/Pages/CurrentBlogPage.css
@@ -1,4 +1,4 @@
-.tagpage-main-div{
+.cbp-main-div{
     height: auto;
     width: 100%;
     display: flex;
@@ -8,20 +8,12 @@
     gap:-50rem;
 }
 
-.tagpage-top{
+.cbp-top{
     margin-top: 5em;
-    width: 55%;
     display: flex;
+    flex-direction: column;
     justify-content:left;
     align-items: center;
     gap: 1rem;
 }
 
-@media only screen and (max-width: 768px) {
-    .tagpage-top{
-        width: 100%;
-        margin-left: -2.5rem;
-        justify-content:space-evenly;
-        gap:0;
-    }
-}
