--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -10,7 +10,6 @@
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
     border: 1px solid rgba(255, 255, 255, 0.3);
-
     display: flex;
     justify-content: center;
     align-items: center;
@@ -20,9 +19,14 @@
     font-weight: 100;
 }
 
-.header-nav{
+.header-nav-dark{
     text-decoration: none;
     color: #fff;
+}
+
+.header-nav-light{
+    text-decoration: none;
+    color: black;
 }
 
 /* mode-switch-css */
